@@ -18,14 +18,12 @@ HOSTS:
     platform: el-7-x86_64
     box: centos/7
     hypervisor: vagrant
-  # Commented out to speed up testing, it is unused at the moment until
-  # the process to get an AD server up is more solid
-  # centos6:
-  #   roles:
-  #     - client
-  #   platform: el-6-x86_64
-  #   box: centos/6
-  #   hypervisor: vagrant
+  centos6:
+    roles:
+      - client
+    platform: el-6-x86_64
+    box: centos/6
+    hypervisor: vagrant
 CONFIG:
   log_level: verbose
   type: aio
